# Anakonda

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: zensical.toml
docs/docs/: database.md  getting-started.md  index.md  models.md  query-managers.md  requests.md  responses.md  routing.md  tutorial-task-manager.md
docs/site/: 404.html  index.html  search.json
docs/site/database/: index.html
docs/site/getting-started/: index.html
docs/site/models/: index.html
docs/site/query-managers/: index.html
docs/site/requests/: index.html
docs/site/responses/: index.html
docs/site/routing/: index.html
docs/site/tutorial-task-manager/: index.html
src/anakonda/: __init__.py  core.py  request.py  response.py  route.py  router.py  routing.py
src/anakonda/database/: async.py  async_db.py  sync.py
src/anakonda/db/: __init__.py  database.py
src/anakonda/db/asyncio/: __init__.py  database.py  querymanager.py
src/anakonda/models/: __init___.py  base.py  fields.py
src/cli/: build.py  main.py  module_slice.py  new_module.py  scaffold.py
src/cli/commands/: init.py
src/cli/templates/: alembic.ini.jinja  main.jinja
src/cli/templates/migrations/: env.jinja
src/kribton/: core.py  request.py  route.py  router.py
src/kribton/db/asyncio/: query_manager.py
src/kribton/models/: base.py
